--- a/css/download-style.css
+++ b/css/download-style.css
@@ -59,16 +59,20 @@ html {
     font-size: 16px;
     line-height: 1.5;
     overscroll-behavior: none;
+    background-color: #000000;
 }
 
 body {
     font-family: var(--font-family);
-    background: linear-gradient(180deg, var(--background-primary) 0%, var(--background-secondary) 100%);
-    color: var(--text-primary);
+    background: linear-gradient(180deg, #000000 0%, #1C1C1E 100%);
+    background-color: #000000;
+    color: #FFFFFF;
     width: 100vw;
     height: 100vh;
     overflow: hidden;
     position: fixed;
+    top: 0;
+    left: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     display: flex;
